--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ variables:
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
 stages:
   - maven
+  - deploy
 
 maven:
   image: maven:3.6.1-jdk-8-slim
@@ -14,3 +15,12 @@ maven:
   retry:
     max: 2
     when: stuck_or_timeout_failure
+
+trigger_downstream:
+  image: maven:3.6.1-jdk-8-slim
+  stage: deploy
+  script:
+    # SportPaper
+    - curl --request POST --form "token=$CI_JOB_TOKEN" --form ref=master https://gitlab.com/api/v4/projects/14583202/trigger/pipeline
+    # Glymur
+    - curl --request POST --form "token=$CI_JOB_TOKEN" --form ref=master https://gitlab.com/api/v4/projects/14583253/trigger/pipeline
