--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <repositories>
     <repository>
       <id>walrus-public</id>
-      <url>https://maven-public.walrus.network</url>
+      <url>https://maven.walrus.gg/repository/walrus-public/</url>
     </repository>
     <repository>
       <id>bungeecord-repo</id>
@@ -22,11 +22,11 @@
   <distributionManagement>
     <snapshotRepository>
       <id>walrus-public</id>
-      <url>https://maven-public.walrus.network</url>
+      <url>https://maven.walrus.gg/repository/walrus-public/</url>
     </snapshotRepository>
     <repository>
       <id>walrus-public</id>
-      <url>https://maven-public.walrus.network</url>
+      <url>https://maven.walrus.gg/repository/walrus-public/</url>
     </repository>
   </distributionManagement>
 
